--- a/main.html
+++ b/main.html
@@ -67,6 +67,8 @@
             <br>
             <br>
 
+			<input type="submit" value="Submit">
+
 
     </form>
 	<!-- the entire body must be written by student -->
