--- a/main.html
+++ b/main.html
@@ -67,7 +67,7 @@
             <br>
             <br>
 
-			<input type="submit" value="Submit">
+			<button type="submit">Sign Up</button>
 
 
     </form>
